--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html>
 
 <head>
-	<title>Parcel Sandbox</title>
+	<title id="title">Doping in Professional Bicycle Racing</title>
 	<meta charset="UTF-8" />
 </head>
 
 <body>
-	<div id="app"></div>
-
+	<h1>Doping in Professional Bicycle Racing</h1>
+	<div id='chart'></div>
+	<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js">
+	</script>
 	<script src="src/index.js">
 	</script>
 </body>
