--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title id="title">Doping in Professional Bicycle Racing</title>
+    <meta charset="UTF-8" />
+  </head>
 
-<head>
-	<title id="title">Doping in Professional Bicycle Racing</title>
-	<meta charset="UTF-8" />
-</head>
-
-<body>
-	<h1>Doping in Professional Bicycle Racing</h1>
-	<div id='chart'></div>
-	<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js">
-	</script>
-	<script src="src/index.js">
-	</script>
-</body>
-
+  <body>
+    <h1>Doping in Professional Bicycle Racing</h1>
+    <div id="chart"></div>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <script src="src/index.js"></script>
+  </body>
 </html>
